Update Experience section title, favicon setup, and enhance Navbar and Tech components for improved UI

--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+    <!-- Favicon setup - multiple sizes for different devices -->
+    <link rel="icon" type="image/png" href="./src//assets/jd_logo.png" sizes="64x64" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Developer Jay</title>
   </head>
