too many changes

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <!-- Favicon setup - multiple sizes for different devices -->
-    <link rel="icon" type="image/png" href="./src//assets/jd_logo.png" sizes="64x64" />
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180" />
+    <link rel="icon" type="image/png" href="src/assets/jd_logo.png" sizes="64x64" />
+    <link rel="apple-touch-icon" href="apple-touch-icon.png" sizes="180x180" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Developer Jay</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="src/main.jsx"></script>
   </body>
 </html>
