--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <!-- Favicon setup - multiple sizes for different devices -->
     <link rel="icon" type="image/png" href="src/assets/jd_logo.png" sizes="64x64" />
     <link rel="apple-touch-icon" href="apple-touch-icon.png" sizes="180x180" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <title>Developer Jay</title>
   </head>
   <body>
